--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "yajra/laravel-datatables-oracle": "^10.1"
+        "yajra/laravel-datatables-oracle": "^10.1",
+
+        "psr/simple-cache": "^1.0|^2.0|^3.0",
+        "symfony/cache": "5.4.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
